fix text alignment of game-tile

--- a/apps/homepage/frontend/src/app/components/game-tiles/game-tiles.component.scss
+++ b/apps/homepage/frontend/src/app/components/game-tiles/game-tiles.component.scss
@@ -22,11 +22,17 @@
     gap: 5px;
 }
 
+.game-description {
+    text-align: right;
+}
+
 
 .game-title {
     align-self: center;
+    text-align: center;
     font-weight: bold;
     font-size: 1.3rem;
+    min-height: 40px;
 }
 
 .line {
